# anime4k-python

./: LICENSE  README.md  setup.cfg  setup.py
anime4k_python/: __init__.py  anime4k.py
