[metadata]
name = anime4k_python
version = 1.1.2
description = Python wrapper of Anime4K GLSL shaders achieved with FFmpeg and libplacebo
long_description = file: README.md
long_description_content_type = text/markdown
author = K4YT3X
author_email = i@k4yt3x.com
license = MIT
keywords = anime4k, ffmpeg, upscaling
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    ffmpeg>=0.2.0
    pillow>=9.1.0

[options.package_data]
anime4k_python = shaders/*.glsl

[build-system]
requires = ["setuptools", "wheel"]
